2001-07-12  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Set to version 1.5.6.  On the assumption that
	backwards compatibility has been broken (though I'm not certain),
	set the binary age and interface age to zero.

	* examples/cppunittest/TestFailureTest.h:
	* include/cppunit/Exception.h:
	* include/cppunit/NotEqualException.h:
	* src/cppunit/Exception.cpp:
	* src/cppunit/NotEqualException.cpp: Add "throw()" to overridden
	std::exception destructors; required for GCC 3.0.

2001-07-07  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* include/cppunit/Makefile.am: Clean config-auto.h using
	DISTCLEANFILES.

	* doc/Makefile.am: Temporarily disable manpage installation.  
	Fix html installation to ensure files removed by uninstall.

	* src/cppunit/estring.h: Removed.

	* src/cppunit/Makefile.am:
	* src/cppunit/TestCase.cpp:
	* src/cppunit/TextTestResult.cpp: Recode to avoid use of estring.

	* examples/cppunittest/OrthodoxTest.h: Add const qualifier
	to operator== methods.

	* include/cppunit/config-bcb5.h:
	* include/cppunit/config-msvc6.h: Define CPPUNIT_HAVE_SSTREAM to 1.

	* config/ac_cxx_have_sstream.m4: New.  Defines macro
	AC_CXX_HAVE_SSTREAM.  Taken from the autoconf archive.

	* config/ac_cxx_have_strstream.m4: New.  Copy of above,
	modified to check for presence of strstream; defines
	macro AC_CXX_HAVE_STRSTREAM.

	* configure.in: Invoke AC_CXX_HAVE_SSTREAM and
	AC_CXX_HAVE_STRSTREAM.

	* include/cppunit/Portability.h: Define class
	CppUnit::OStringStream.

	* include/cppunit/TestAssert.h:
	* src/cppunit/TestFactoryRegistry.cpp: Replace std::ostringstream
	by CppUnit::OStringStream.


2001-07-06  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Add --disable-typeinfo-name option.

	* README: Add note about new configure option.

	* configure.in: Remove AM_DISABLE_STATIC.

	* INSTALL: Update to version from autoconf 2.50.

2001-07-05  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
